2010-01-10
 - GraphicsScene can now insert modules via rightclick

2009-12-18
 - CHANGELOG created