@@ -12,10 +12,8 @@
 #include <QVariant>
 #include <QDebug>
 #include <QKeyEvent>
-
-#include <QPrinter>
-#include <QPrintDialog>
-
+#include <QMenu>
+#include <QGraphicsSceneContextMenuEvent>
 #include "Model.h"
 #include "Module.h"
 #include "Connection.h"
@@ -26,11 +24,12 @@
 /*! */
 class GraphicsScene : public QGraphicsScene {
   Q_OBJECT
+  friend class Document;
   friend class ItemView;
 
   public:
     /*! constructor */
-    GraphicsScene( Model *model, QWidget * parent );
+    GraphicsScene( Model *model, QWidget * parent = NULL );
     /*! destructor */
     ~GraphicsScene();
     /*! a wrapper function for all items in the scene, so that they can call data() directly */
@@ -42,19 +41,23 @@ class GraphicsScene : public QGraphicsScene {
 //     void moduleUpdated( QPersistentModelIndex item );
     bool moduleRemoved( QPersistentModelIndex item );
   private:
+    void contextMenuEvent ( QGraphicsSceneContextMenuEvent * contextMenuEvent );
+    QMenu menu;
+    QPoint screenPos;
+    QVector<QString> loadableModuleNames;
     QGraphicsItem* modelToSceenIndex( QPersistentModelIndex index );
     /*! this (red) line is needed for adding connections with the MMB (mid-mouse-button) between nodes */
     QGraphicsLineItem *line;
     /*! the GraphicsScene visualizes the data of this model */
     Model *model;
     /*! we handle all keyboard events here, this is only interrupted when an item got focus */
-    void keyPressEvent( QKeyEvent * keyEvent );
+//     void keyPressEvent( QKeyEvent * keyEvent );
     /*! we handle all mouse events here, this is only interrupted when an item got focus */
-    void mousePressEvent( QGraphicsSceneMouseEvent * event );
+//     void mousePressEvent( QGraphicsSceneMouseEvent * event );
     /*! we handle all mouse events here, this is only interrupted when an item got focus */
-    void mouseMoveEvent( QGraphicsSceneMouseEvent * event );
+//     void mouseMoveEvent( QGraphicsSceneMouseEvent * event );
     /*! we handle all mouse events here, this is only interrupted when an item got focus */
-    void mouseReleaseEvent( QGraphicsSceneMouseEvent * event );
+//     void mouseReleaseEvent( QGraphicsSceneMouseEvent * event );
     bool compareIndexes( const QPersistentModelIndex & a, const QPersistentModelIndex & b );
 
 //   public slots:
@@ -65,12 +68,12 @@ class GraphicsScene : public QGraphicsScene {
 //   protected slots:
 //     void clearScene();
 
-  private slots:
+  private Q_SLOTS:
     /*! the current selection of items changes, for example when some nodes or
     connections vanished based on a model request since another view deleted them */
 //     void selectionChanged();
 
-  signals:
+  Q_SIGNALS:
     /*! hides this view widget */
 //     void hideView();
     /*! helper signal, see code */
@@ -83,6 +86,13 @@ class GraphicsScene : public QGraphicsScene {
 //     void zoomFit();
     /*! when a new view pops up this reset() is called to query items from the model */
     void reset();
+    void CreateModuleSignal(QString, QPoint);
+
+  protected:
+    void setLoadableModuleNames(QVector<QString> loadableModuleNames);
+public Q_SLOTS:
+    void menuSelectionMade(QAction* action);
+
 };
 
 #endif
